<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="add_shortcuts">Add Shortcuts</string>
    <string name="information">Info</string>
    <string name="delete">Uninstall</string>
    <string name="new_incognito_tab">New Incognito Tab</string>
    <string name="new_tab">New Tab</string>
    <string name="maps_work">Work</string>
    <string name="maps_home">Home</string>
    <string name="search">Search</string>
    <string name="ebay_watching">Watching</string>
    <string name="ebay_local_offer">Selling</string>
    <string name="ebay_following">Following</string>
    <string name="evernote_note">Simple Note</string>
    <string name="evernote_audio">Audio</string>
    <string name="evernote_camera">Camera</string>
    <string name="gmail_compose">Compose</string>
    <string name="allo_conversation">New Conversation</string>
    <string name="drive_upload">Upload</string>
    <string name="drive_scan">Scan</string>
    <string name="youtube_sub">Subscriptions</string>
    <string name="youtube_trending">Trending</string>
    <string name="calendar_event">New event</string>
    <string name="calendar_reminder">New reminder</string>
    <string name="photo_free_space">Free up space</string>
    <string name="photo_lucky">I\'m Feeling Lucky</string>
    <string name="docs_new">Create new</string>
    <string name="docs_template">Choose template</string>
    <string name="greenify_hibernate">Hibernate Now</string>
    <string name="greenify_sleep">Sleep and Hibernate</string>
    <string name="movies_my">My Movies</string>
    <string name="movies_tv">My TV Shows</string>
    <string name="movies_wishlist">My Wishlist</string>
    <string name="music_library">My library</string>
    <string name="music_recent">Recent activity</string>
    <string name="hang_chat">Chat</string>
    <string name="hang_video">Video call</string>
    <string name="hang_call">Voice call</string>
    <string name="folder_title">Folder Title</string>
    <string name="folder_enter_title">Enter your title</string>
    <string name="folder_rename">Rename Folder</string>
    <string name="folder_open">Open Folder</string>
    <string name="alert_title">Title</string>
    <string name="alert_max">Max number of shortcuts is:</string>
    <string name="alert_choose_app">Choose App</string>
    <string name="nothing">Nothing</string>
    <string name="ask_default">Do want you set &app_name; as the default launcher?</string>
    <string name="ask_restart">Do you want to restart launcher?</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="app_name" translatable="false">Flick Launcher</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="all_apps_search_bar_hint">Search Apps</string>
    <string name="all_apps_loading_message">Loading Apps&#8230;</string>
    <string name="all_apps_no_search_results">No Apps found matching \"<xliff:g id="query" example="Android">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="msg_no_phone_permission"><xliff:g id="app_name" example="Launcher3">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="disabled_app_label">Disabled <xliff:g id="app_name" example="Messenger">%1$s</xliff:g></string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="accessibility_action_overview">Overview</string>
    <string name="preferences_layout_option">Layout</string>
    <string name="allow_rotation_title">Allow Home screen rotation</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_blocked_desc">Current Display setting doesn\'t permit rotation</string>
    <string name="allow_icon_title">Allow circular icons</string>
    <string name="allow_icon_summary">This setting makes icons circular</string>
    <string name="grid_size">Change grid size</string>
    <string name="grid_size_summary">Set your custom grid size</string>
    <string name="column_size">Column Size</string>
    <string name="row_size">Row Size</string>
    <string name="preferences_dock_option">Dock</string>
    <string name="preferences_folder">Folder</string>
    <string name="dock_size">Icon in dock</string>
    <string name="all_apps_dialog">Icon in all apps</string>
    <string name="dock_size_summary">Change number of icons in dock</string>
    <string name="preferences_various_option">Various</string>
    <string name="ask_default_launcher">Set &app_name; as default launcher</string>
    <string name="ask_default_launcher_summary">Change default launcher</string>
    <string name="default_launcher_already_set">You have &app_name; as default launcher!</string>
    <string name="ask_restart_launcher">Restart &app_name;</string>
    <string name="preferences_gesture">Gestures</string>
    <string name="allow_sleep">Allow double tab to sleep</string>
    <string name="allow_sleep_summary">Enable double tap to lock screen</string>
    <string name="choose_double_tap">Tap Tap Gesture</string>
    <string name="choose_double_tap_summary">Choose your custom app</string>
    <string name="choose_bottom_swipe">Swipe Down Gesture</string>
    <string name="choose_up_swipe">Swipe Up Gesture</string>
    <string name="choose_up_swipe_two_fingers">Swipe Up Gesture (two fingers)</string>
    <string name="choose_bottom_swipe_two_fingers">Swipe Down Gesture (two fingers)</string>
    <string name="preferences_info">Info</string>
    <string name="info">Information about &app_name;</string>
    <string name="donation">Donation</string>
    <string name="donation_summary">We are counting on you!</string>
    <string name="all_apps_size">Change app drawer size</string>
    <string name="all_apps_size_summary">Set your custom number of icon in all apps</string>
    <string name="disclaimer_dialog_message">Welcome to &app_name;!\n\nThis is an Open Source Launcher and available on <a href="https://github.com/michelelacorte/UniversalLauncher">GitHub</a>.\n\nFlick Launcher project is inspired by Google Pixel style, we add a few tweaks.\nFor more detail visit <a href="https://github.com/michelelacorte/FlickLauncher">GitHub Page</a>.\n\nThis project is under <a href="https://github.com/michelelacorte/FlickLauncher/blob/master/LICENSE">Apache v2 License</a>, and all right reserved to Michele Lacorte.\n\nIf you like this app please help developer download <a href="https://play.google.com/store/apps/details?id=it.michelelacorte.githubdonation">Donation App</a>.\n\n\n\nApp Version v0.1.0 Build 100</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this"
        >Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="app_downloading_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> downloading, <xliff:g id="progress" example="30%">%2$s</xliff:g> complete</string>
    <string name="app_waiting_download_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> waiting to install</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g id="number" example="1">%1$s</xliff:g> column <xliff:g id="number" example="1">%2$s</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="move_to_hotseat_position">Move to favorites position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="item_moved">Item moved</string>
    <string name="add_to_folder">Add to folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="add_to_folder_with_app">Add to folder with <xliff:g id="name" example="Messenger">%1$s</xliff:g></string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="title_fingerprint">One-Touch Unlock</string>
    <string name="desc_fingerprint">Please place your fingertip on the scanner to verify your identity</string>
    <string name="note">(This app has fingerprint lock method. Your device should have at least one fingerprint registered in device settings)</string>
</resources>